plugins {
    id 'java'
    id 'application'
}

group = 'com.example'
version = '1.0.0'
sourceCompatibility = '8'
targetCompatibility = '8'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.gitlab4j:gitlab4j-api:6.0.0-rc.5'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
}

application {
    mainClass = 'com.example.gitlabcommits.Main'
}

jar {
    manifest {
        attributes 'Main-Class': 'com.example.gitlabcommits.Main'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
